--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link-http": "^1.5.14",
+    "dotenv": "^7.0.0",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
