--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "apollo-link": "^1.2.3",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
+    "express": "^4.16.4",
+    "express-favicon": "^2.0.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "react": "^16.6.0",
@@ -19,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-prod": "nodemon index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
