--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.4.3",
     "apollo-link": "^1.2.3",
