--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-favicon": "^2.0.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "lodash": "^4.17.11",
     "react": "^16.6.0",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.6.0",
